Update process to handle transitive dependencies