@@ -12,6 +12,9 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 public class SpoonTransitiveComparison {
 
@@ -31,6 +34,15 @@ public class SpoonTransitiveComparison {
 
     }
 
+    public SpoonTransitiveComparison(MavenErrorLog mavenErrorLog, Client clientProject, Client sourceClient,CtModel clientModel) {
+        this.mavenErrorLog = mavenErrorLog;
+        this.clientProject = clientProject;
+        this.sourceClient = sourceClient;
+        this.clientModel = clientModel;
+        sourceModel = sourceClient.createModel();
+
+    }
+
 
     public Set<MatchElements> findTransitiveChanges() {
 
@@ -43,36 +55,77 @@ public class SpoonTransitiveComparison {
         return match;
     }
 
+
+
     private List<CtElement> getElementsByClass(String file, Set<ErrorInfo> errorInfo) {
 
-        List<String> lines = errorInfo.stream().map(ErrorInfo::getClientLinePosition).toList();
-        return clientModel.filterChildren(element ->
-                !SpoonAnalyzer.shouldBeIgnored(element)
-                        && element.getPosition().isValidPosition()
-                        && element.getPosition().toString().contains(file)
-                        && lines.contains(String.valueOf(element.getPosition().getLine())
-                )
-        ).list();
+
+        CompletableFuture<List<CtElement>> future = CompletableFuture.supplyAsync(() -> {
+            List<String> lines = errorInfo.stream().map(ErrorInfo::getClientLinePosition).collect(Collectors.toList());
+            return clientModel.filterChildren(element ->
+                    !SpoonAnalyzer.shouldBeIgnored(element)
+                            && element.getPosition().isValidPosition()
+                            && element.getPosition().toString().contains(file)
+                            && lines.contains(String.valueOf(element.getPosition().getLine()))
+            ).list();
+        });
+
+        try {
+            return future.get(5, TimeUnit.SECONDS);
+        } catch (Exception e) {
+            return List.of();
+        }
+
+
+//        List<String> lines = errorInfo.stream().map(ErrorInfo::getClientLinePosition).toList();
+//        return clientModel.filterChildren(element ->
+//                !SpoonAnalyzer.shouldBeIgnored(element)
+//                        && element.getPosition().isValidPosition()
+//                        && element.getPosition().toString().contains(file)
+//                        && lines.contains(String.valueOf(element.getPosition().getLine())
+//                )
+//        ).list();
     }
 
 
-    private List<MatchElements> findElements(List<CtElement> elements) {
-
-        return elements.stream().map(c -> {
-            Class<?> a = c.getClass();
-//            if(c.getReferencedTypes().contains() instanceof CtConstructor){
+    //    private List<MatchElements> findElements(List<CtElement> elements) {
 //
+//        return elements.stream().map(c -> {
+//            Class<?> a = c.getClass();
+////            if(c.getReferencedTypes().contains() instanceof CtConstructor){
+////
+////            }
+//            final List<? extends CtElement> elements1 = sourceModel.getElements(new TypeFilter<>(c.getClass()));
+//            for (CtElement element : elements1) {
+//                if (element.toString().equals(c.toString())) {
+//                    return new MatchElements(c, element);
+//                }
 //            }
-            final List<? extends CtElement> elements1 = sourceModel.getElements(new TypeFilter<>(c.getClass()));
-            for (CtElement element : elements1) {
-                if (element.toString().equals(c.toString())) {
-                    return new MatchElements(c, element);
+//            return null;
+//        }).filter(Objects::nonNull).toList();
+//    }
+    private List<MatchElements> findElements(List<CtElement> elements) {
+        CompletableFuture<List<MatchElements>> future = CompletableFuture.supplyAsync(() -> {
+            return elements.stream().map(c -> {
+                Class<?> a = c.getClass();
+                final List<? extends CtElement> elements1 = sourceModel.getElements(new TypeFilter<>(c.getClass()));
+                for (CtElement element : elements1) {
+                    if (element.toString().equals(c.toString())) {
+                        return new MatchElements(c, element);
+                    }
                 }
-            }
-            return null;
-        }).filter(Objects::nonNull).toList();
-    }
+                return null;
+            }).filter(Objects::nonNull).collect(Collectors.toList());
+        });
 
+        try {
+            // Esperar un máximo de 30 segundos por la respuesta
+            return future.get(5, TimeUnit.SECONDS);
+        } catch (Exception e) {
+            // En caso de cualquier excepción (tiempo excedido, interrupción, etc.), devolver una lista vacía
+            return List.of();
+        }
+    }
 
 }
 
